--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 </header>
                 <nav>
     		<ul>
-	        	<li><a href="/index.html">About</a></li>
+	        	<li><a href="https://ultan-neville.github.io/">About</a></li>
         		<li><a href="/pubs.html">Publications</a></li>
     		</ul>
 		</nav>
