--- a/pubs.html
+++ b/pubs.html
@@ -13,7 +13,7 @@
 
                 <nav>
     		<ul>
-	        	<li><a href="/index.html">About</a></li>
+	        	<li><a href="https://ultan-neville.github.io/">About</a></li>
         		<li><a href="/pubs.html">Publications</a></li>
     		</ul>
 		</nav>
