--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                 
                                 <p>I recently succeeded in my viva voce defence at the <a href="https://www.ucc.ie/en/compsci/">Department of Computer Science</a> in University College Cork for a Ph.D. in reasoning about anomaly-free policy
 management for network and host-based access control mechanisms. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
-				<p>My current research interests include autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security and cyber-physical security. </p>
+				<p>My current research interests include autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security, cyber-physical security and mathematics. </p>
                                 <p>My Erd&#337;s number is <a href="https://www.csauthors.net/distance/paul-erdos/ultan-neville">5</a> &#9786;</p>
 
 
