--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ management for network and host-based access control mechanisms. I also hold an 
 
                         <h2>Publications</h2>
                 <ul>
-                <li>U. Neville and S.N. Foley. Reasoning About Firewall Policies Through Refinement and Composition. 
+                <li style="text-align:justify">U. Neville and S.N. Foley. Reasoning About Firewall Policies Through Refinement and Composition. 
 In <i>Data and Applications Security and Privacy
 XXX: 30th Annual IFIP WG 11.3 Conference, DBSec 2016, Trento, Italy,
 July 18-20, 2016. Proceedings</i>, 2016. <a href="/pubs/dbsec2016-FW.pdf" target="_blank">[PDF]</a> </li><br>
