--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@ In <i>Data and Applications Security and Privacy
 XXX: 30th Annual IFIP WG 11.3 Conference, DBSec 2016, Trento, Italy,
 July 18-20, 2016. Proceedings</i>, 2016. <a href="/pubs/dbsec2016-FW.pdf" target="_blank">[PDF]</a> </li><br>
 
-                <li>S.N. Foley and U. Neville. A Firewall Algebra for OpenStack. In <i>2015 IEEE
+                <li style="text-align:justify">S.N. Foley and U. Neville. A Firewall Algebra for OpenStack. In <i>2015 IEEE
 Conference on Communications and Network Security, CNS 2015, Florence,
 Italy, September 28-30, 2015</i>, pages 541-549. IEEE, 2015. <a href="/pubs/spc-2015.pdf" target="_blank">[PDF]</a> </li><br>
 
-                <li>W.M. Fitzgerald, U. Neville, and S.N. Foley. MASON: Mobile Autonomic
+                <li style="text-align:justify">W.M. Fitzgerald, U. Neville, and S.N. Foley. MASON: Mobile Autonomic
 Security for Network Access Controls. <i>Journal of Information Security and
 Applications (JISA)</i>, 18(1):14-29, 2013. <a href="/pubs/mason2013.pdf" target="_blank">[PDF]</a> </li><br>
 			
-                <li>W.M. Fitzgerald, U. Neville, and S.N. Foley. Automated Smartphone Security Configuration. In <i>Data Privacy Management and Autonomous Spontaneous Security, 7th International
+                <li style="text-align:justify">W.M. Fitzgerald, U. Neville, and S.N. Foley. Automated Smartphone Security Configuration. In <i>Data Privacy Management and Autonomous Spontaneous Security, 7th International
                Workshop, DPM 2012, and 5th International Workshop, SETOP 2012,
                Pisa, Italy, September 13-14, 2012. Revised Selected Papers</i>, pages 227-242, 2012. <a href="/pubs/setop2012.pdf" target="_blank">[PDF]</a> </li>
                 </ul> 
