--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
                 <header>
-                <h2>Ultan Neville (B.Sc (Hons), M.Sc, Ph.D.) <img src="/images/ultan.png" alt="Ultan Neville" width="200" height="200" align="right"></h2>
+                <h2>Ultan Neville (B.Sc (Hons.), M.Sc, Ph.D.) <img src="/images/ultan.png" alt="Ultan Neville" width="200" height="200" align="right"></h2>
                 </header>
                 <nav>
     		<ul>
