--- a/pubs.html
+++ b/pubs.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
                 <header>
-                <h2>Ultan Neville (B.Sc (Hons), M.Sc, Ph.D.)</h2>
+                <h2>Ultan Neville (B.Sc (Hons.), M.Sc, Ph.D.)</h2>
                 </header>
 
                 <nav>
