--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
                 <meta name="description" content="Personal webpage of Ultan Neville">
                 <meta name="keywords" content="security, cyber security firewall, ultan neville, ultan neville listowel">
+		<meta name="revisit-after" content="15 days" />
+                <meta name="distribution" content="global" />
+                <meta name="robots" content="ALL" />
 	</head>
 	<body>
                 <header>
@@ -21,8 +24,8 @@
     		<div class="blurb">
         		<h1>Personal page</h1>
 				<p style="text-align:justify">I'm a Post-Doctoral Researcher (Cyber Security) at the <a href="https://www.ucc.ie/en/misl/" target="_blank">Mobile and Internet Systems Labratory (MISL)</a>, <a href="https://www.ucc.ie/en/compsci/" target="_blank">Department of Computer Science</a>, <a href="https://www.ucc.ie/en/" target="_blank">University College Cork (UCC)</a>, Ireland. I work as part of the <a href="http://www.chistera.eu/" target="_blank">CHIST-ERA</a> <a href="https://dyposit.eu/" target="_blank">DYPOSIT</a> project. My research is directed by <a href="https://simonnfoley.github.io/" target="_blank">Dr. Simon Foley</a>, and is focused primarily on autonomic security control reconfiguration, and the problem of large, shared Cyber-Physical System infrastructures under attack. </p>                                       
-                                <p style="text-align:justify">I recently succeeded in my viva voce defence at the Department of Computer Science in UCC for a Ph.D. in reasoning about anomaly-free policy
-management for network and host-based access control mechanisms. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
+                                <p style="text-align:justify">I succeeded in my viva voce defence at the Department of Computer Science in UCC for a Ph.D. in reasoning about anomaly-free policy
+management for network and host-based access control mechanisms in May 2017. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
 				<p style="text-align:justify">My current research interests include autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security, cyber-physical security and mathematics. </p>
                                 <p style="text-align:justify">My Erd&#337;s number is <a href="https://www.csauthors.net/distance/paul-erdos/ultan-neville" target="_blank">5</a> &#9786;</p>
 
@@ -31,19 +34,19 @@ management for network and host-based access control mechanisms. I also hold an 
                 <li style="text-align:justify">U. Neville and S.N. Foley. Reasoning About Firewall Policies Through Refinement and Composition. 
 In <i>Data and Applications Security and Privacy
 XXX: 30th Annual IFIP WG 11.3 Conference, DBSec 2016, Trento, Italy,
-July 18-20, 2016. Proceedings</i>, 2016. <a href="/pubs/dbsec2016-FW.pdf" target="_blank">[PDF]</a> </li><br>
+July 18-20, 2016. Proceedings</i>, 2016. <a href="https://doi.org/10.1007/978-3-319-41483-6_19" target="_blank">[DOI]</a> <a href="/pubs/dbsec2016-FW.pdf" target="_blank">[PDF]</a> </li><br>
 
                 <li style="text-align:justify">S.N. Foley and U. Neville. A Firewall Algebra for OpenStack. In <i>2015 IEEE
 Conference on Communications and Network Security, CNS 2015, Florence,
-Italy, September 28-30, 2015</i>, pages 541-549. IEEE, 2015. <a href="/pubs/spc-2015.pdf" target="_blank">[PDF]</a> </li><br>
+Italy, September 28-30, 2015</i>, pages 541-549. IEEE, 2015. <a href="https://doi.org/10.1109/CNS.2015.7346867" target="_blank">[DOI]</a> <a href="/pubs/spc-2015.pdf" target="_blank">[PDF]</a> </li><br>
 
                 <li style="text-align:justify">W.M. Fitzgerald, U. Neville, and S.N. Foley. MASON: Mobile Autonomic
 Security for Network Access Controls. <i>Journal of Information Security and
-Applications (JISA)</i>, 18(1):14-29, 2013. <a href="/pubs/mason2013.pdf" target="_blank">[PDF]</a> </li><br>
+Applications (JISA)</i>, 18(1):14-29, 2013. <a href="https://doi.org/10.1016/j.jisa.2013.08.001" target="_blank">[DOI]</a> <a href="/pubs/mason2013.pdf" target="_blank">[PDF]</a> </li><br>
 			
                 <li style="text-align:justify">W.M. Fitzgerald, U. Neville, and S.N. Foley. Automated Smartphone Security Configuration. In <i>Data Privacy Management and Autonomous Spontaneous Security, 7th International
                Workshop, DPM 2012, and 5th International Workshop, SETOP 2012,
-               Pisa, Italy, September 13-14, 2012. Revised Selected Papers</i>, pages 227-242, 2012. <a href="/pubs/setop2012.pdf" target="_blank">[PDF]</a> </li>
+               Pisa, Italy, September 13-14, 2012. Revised Selected Papers</i>, pages 227-242, 2012. <a href="https://doi.org/10.1007/978-3-642-35890-6_17" target="_blank">[DOI]</a> <a href="/pubs/setop2012.pdf" target="_blank">[PDF]</a> </li>
                 </ul> 
     		</div>
 		</div>
