--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@ management for network and host-based access control mechanisms in May 2017. I a
                 <li style="text-align:justify">U. Neville and S.N. Foley. Reasoning About Firewall Policies Through Refinement and Composition. 
 In <i>Data and Applications Security and Privacy
 XXX: 30th Annual IFIP WG 11.3 Conference, DBSec 2016, Trento, Italy,
-July 18-20, 2016. Proceedings</i>, 2016. <a href="https://doi.org/10.1007/978-3-319-41483-6_19" target="_blank">[DOI]</a> <a href="/pubs/dbsec2016-FW.pdf" target="_blank">[PDF]</a> </li><br>
+July 18-20, 2016. Proceedings</i>, 2016. <a href="https://doi.org/10.1007/978-3-319-41483-6_19" target="_blank">[DOI]</a> <a href="/bib/dbsec2016-FW.bib" target="_blank">[BibTeX]</a> <a href="/pubs/dbsec2016-FW.pdf" target="_blank">[PDF]</a> </li><br>
 
                 <li style="text-align:justify">S.N. Foley and U. Neville. A Firewall Algebra for OpenStack. In <i>2015 IEEE
 Conference on Communications and Network Security, CNS 2015, Florence,
-Italy, September 28-30, 2015</i>, pages 541-549. IEEE, 2015. <a href="https://doi.org/10.1109/CNS.2015.7346867" target="_blank">[DOI]</a> <a href="/pubs/spc-2015.pdf" target="_blank">[PDF]</a> </li><br>
+Italy, September 28-30, 2015</i>, pages 541-549. IEEE, 2015. <a href="https://doi.org/10.1109/CNS.2015.7346867" target="_blank">[DOI]</a> <a href="/bib/spc-2015.bib" target="_blank">[BibTeX]</a> <a href="/pubs/spc-2015.pdf" target="_blank">[PDF]</a> </li><br>
 
                 <li style="text-align:justify">W.M. Fitzgerald, U. Neville, and S.N. Foley. MASON: Mobile Autonomic
 Security for Network Access Controls. <i>Journal of Information Security and
-Applications (JISA)</i>, 18(1):14-29, 2013. <a href="https://doi.org/10.1016/j.jisa.2013.08.001" target="_blank">[DOI]</a> <a href="/pubs/mason2013.pdf" target="_blank">[PDF]</a> </li><br>
+Applications (JISA)</i>, 18(1):14-29, 2013. <a href="https://doi.org/10.1016/j.jisa.2013.08.001" target="_blank">[DOI]</a> <a href="/bib/mason2013.bib" target="_blank">[BibTeX]</a> <a href="/pubs/mason2013.pdf" target="_blank">[PDF]</a> </li><br>
 			
                 <li style="text-align:justify">W.M. Fitzgerald, U. Neville, and S.N. Foley. Automated Smartphone Security Configuration. In <i>Data Privacy Management and Autonomous Spontaneous Security, 7th International
                Workshop, DPM 2012, and 5th International Workshop, SETOP 2012,
-               Pisa, Italy, September 13-14, 2012. Revised Selected Papers</i>, pages 227-242, 2012. <a href="https://doi.org/10.1007/978-3-642-35890-6_17" target="_blank">[DOI]</a> <a href="/pubs/setop2012.pdf" target="_blank">[PDF]</a> </li>
+               Pisa, Italy, September 13-14, 2012. Revised Selected Papers</i>, pages 227-242, 2012. <a href="https://doi.org/10.1007/978-3-642-35890-6_17" target="_blank">[DOI]</a> <a href="/bib/setop2012.bib" target="_blank">[BibTeX]</a> <a href="/pubs/setop2012.pdf" target="_blank">[PDF]</a> </li>
                 </ul> 
     		</div>
 		</div>
