--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ management for network and host-based access control mechanisms in May 2017. I a
 
                         <h2>Publications</h2>
                 <ul>
-                <li style="text-align:justify">U.J. Neville. <i>Reasoning About Firewall Policies Through Refinement and Composition.<i> 
+                <li style="text-align:justify">U.J. Neville. <i>Reasoning About Firewall Policies Through Refinement and Composition.</i> 
 PhD thesis, University College Cork, Ireland, February 2017. <a href="https://doi.org/10468/4820" target="_blank">[DOI]</a> <a href="/bib/NevilleUJ_PhD2017.bib" target="_blank">[BibTeX]</a> <a href="https://cora.ucc.ie/bitstream/handle/10468/4820/NevilleUJ_PhD2017.pdf?sequence=1&isAllowed=y" target="_blank">[PDF]</a> </li><br>
 						
                 <li style="text-align:justify">U. Neville and S.N. Foley. Reasoning About Firewall Policies Through Refinement and Composition. 
