--- a/pubs.html
+++ b/pubs.html
@@ -19,7 +19,9 @@
 		</nav>
 
                         <h2>Publications</h2>
-<ul>
+                <ul>
+        	<li style="text-align:justify">U.J. Neville. Reasoning About Firewall Policies Through Refinement and Composition. PhD thesis, University College Cork, Ireland, February 2017. <a href="https://doi.org/10468/4820" target="_blank">[DOI]</a> <a href="/bib/NevilleUJ_PhD2017.bib" target="_blank">[BibTeX]</a> <a href="https://cora.ucc.ie/bitstream/handle/10468/4820/NevilleUJ_PhD2017.pdf?sequence=1&isAllowed=y" target="_blank">[PDF]</a> </li><br>
+
                 <li style="text-align:justify">U. Neville and S.N. Foley. Reasoning About Firewall Policies Through Refinement and Composition. 
 In <i>Data and Applications Security and Privacy
 XXX: 30th Annual IFIP WG 11.3 Conference, DBSec 2016, Trento, Italy,
