--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
                 <header>
-                <h2>Ultan Neville (B.Sc. (Hons.), M.Sc., Ph.D.) <img src="/images/ultan.png" alt="Ultan Neville" width="200" height="200" align="right"></h2>
+                <h2>Ultan Neville (B.Sc. (Hons.), M.Sc., Ph.D.) </h2>
                 </header>
                 <nav>
     		<ul>
@@ -29,30 +29,6 @@ management for network and host-based access control mechanisms in May 2017. I a
 				<p style="text-align:justify">My current research interests include autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security, cyber-physical security and mathematics. </p>
                                 <p style="text-align:justify">My Erd&#337;s number is <a href="https://www.csauthors.net/distance/paul-erdos/ultan-neville" target="_blank">5</a> &#9786;</p>
 
-                        <h2>Publications</h2>
-                <ul>
-                <li style="text-align:justify">U. Neville and S.N. Foley. Reasoning about firewall policies through refinement and composition. 
-<i>Journal of Computer Security</i>, 26(2):207-254, 2018. <a href="https://doi.org/10.3233/JCS-17971" target="_blank">[DOI]</a> <a href="/bib/jcs2018.bib" target="_blank">[BibTeX]</a> <a href="/pubs/jcs2018.pdf" target="_blank">[PDF]</a> </li><br>
-			
-		<li style="text-align:justify">U.J. Neville. <i>Reasoning About Firewall Policies Through Refinement and Composition.</i> PhD thesis, University College Cork, Ireland, February 2017. <a href="https://doi.org/10468/4820" target="_blank">[DOI]</a> <a href="/bib/NevilleUJ_PhD2017.bib" target="_blank">[BibTeX]</a> <a href="https://cora.ucc.ie/bitstream/handle/10468/4820/NevilleUJ_PhD2017.pdf?sequence=1&isAllowed=y" target="_blank">[PDF]</a> </li><br>
-						
-                <li style="text-align:justify">U. Neville and S.N. Foley. Reasoning About Firewall Policies Through Refinement and Composition. 
-In <i>Data and Applications Security and Privacy
-XXX: 30th Annual IFIP WG 11.3 Conference, DBSec 2016, Trento, Italy,
-July 18-20, 2016. Proceedings</i>, 2016. <a href="https://doi.org/10.1007/978-3-319-41483-6_19" target="_blank">[DOI]</a> <a href="/bib/dbsec2016-FW.bib" target="_blank">[BibTeX]</a> <a href="/pubs/dbsec2016-FW.pdf" target="_blank">[PDF]</a> </li><br>
-
-                <li style="text-align:justify">S.N. Foley and U. Neville. A Firewall Algebra for OpenStack. In <i>2015 IEEE
-Conference on Communications and Network Security, CNS 2015, Florence,
-Italy, September 28-30, 2015</i>, pages 541-549. IEEE, 2015. <a href="https://doi.org/10.1109/CNS.2015.7346867" target="_blank">[DOI]</a> <a href="/bib/spc-2015.bib" target="_blank">[BibTeX]</a> <a href="/pubs/spc-2015.pdf" target="_blank">[PDF]</a> </li><br>
-
-                <li style="text-align:justify">W.M. Fitzgerald, U. Neville, and S.N. Foley. MASON: Mobile Autonomic
-Security for Network Access Controls. <i>Journal of Information Security and
-Applications (JISA)</i>, 18(1):14-29, 2013. <a href="https://doi.org/10.1016/j.jisa.2013.08.001" target="_blank">[DOI]</a> <a href="/bib/mason2013.bib" target="_blank">[BibTeX]</a> <a href="/pubs/mason2013.pdf" target="_blank">[PDF]</a> </li><br>
-			
-                <li style="text-align:justify">W.M. Fitzgerald, U. Neville, and S.N. Foley. Automated Smartphone Security Configuration. In <i>Data Privacy Management and Autonomous Spontaneous Security, 7th International
-               Workshop, DPM 2012, and 5th International Workshop, SETOP 2012,
-               Pisa, Italy, September 13-14, 2012. Revised Selected Papers</i>, pages 227-242, 2012. <a href="https://doi.org/10.1007/978-3-642-35890-6_17" target="_blank">[DOI]</a> <a href="/bib/setop2012.bib" target="_blank">[BibTeX]</a> <a href="/pubs/setop2012.pdf" target="_blank">[PDF]</a> </li>
-                </ul> 
     		</div>
 		</div>
 		<footer>
