--- a/pubs.html
+++ b/pubs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Personal page</title>
+		<title>Publications</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
                 <meta name="description" content="Personal webpage of Ultan Neville">
                 <meta name="keywords" content="security, cyber security firewall, ultan neville, ultan neville listowel">
