--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Personal page</title>
+		<title>Personal pages</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
-                <meta name="description" content="Personal webpage of Ultan Neville">
+                <meta name="description" content="Personal webpages of Ultan Neville">
                 <meta name="keywords" content="security, cyber security firewall, ultan neville, ultan neville listowel">
                 <meta name="revisit-after" content="15 days" />
                 <meta name="distribution" content="global" />
@@ -11,7 +11,7 @@
 	</head>
 	<body>
                 <header>
-                <h2>Ultan Neville (B.Sc. (Hons.), M.Sc., Ph.D.) </h2>
+                <h2>Dr. Ultan Neville (B.Sc. (Hons.), M.Sc., Ph.D.) </h2>
                 </header>
                 <nav>
     		<ul>
@@ -22,9 +22,12 @@
 
 		<div class="container">
     		<div class="blurb">
-        		<h1>Personal page</h1>
-				<p style="text-align:justify">I'm a Post-Doctoral Researcher (Cyber Security) at the <a href="https://www.ucc.ie/en/misl/" target="_blank">Mobile and Internet Systems Labratory (MISL)</a>, <a href="https://www.ucc.ie/en/compsci/" target="_blank">Department of Computer Science</a>, <a href="https://www.ucc.ie/en/" target="_blank">University College Cork (UCC)</a>, Ireland. I work as part of the <a href="http://www.chistera.eu/" target="_blank">CHIST-ERA</a> <a href="https://dyposit.eu/" target="_blank">DYPOSIT</a> project. My research is directed by <a href="https://simonnfoley.github.io/" target="_blank">Dr. Simon Foley</a>, and is focused primarily on autonomic security control reconfiguration, and the problem of large, shared Cyber-Physical System infrastructures under attack. </p>                                       
-                                <p style="text-align:justify">I succeeded in my viva voce defence at the Department of Computer Science in UCC for a Ph.D. in reasoning about anomaly-free policy
+        		<h1>Personal pages</h1>
+				<p style="text-align:justify">I'm currently a Senior Cyber Security Engineer at <a href="http://www.johnsoncontrols.com/" target="_blank">Johnson Controls</a>, where I specialize in Product Security and Enterprise Application Security. I report to the Director of Global Product Security, Technical Services division at JCI, where
+I lead the ongoing development and operation of an automated Red Teaming ecosystem for the Global Product Security Technical Services team - a best-in-class scalable system for internal security assessment and pen-testing capabilities, applied to various product lines at JCI.</p>                                       
+				<p style="text-align:justify">I was previously a Post-Doctoral Researcher (Cyber Security) at the <a href="https://www.ucc.ie/en/misl/" target="_blank">Mobile and Internet Systems Labratory (MISL)</a>, <a href="https://www.ucc.ie/en/compsci/" target="_blank">Department of Computer Science</a>, <a href="https://www.ucc.ie/en/" target="_blank">University College Cork (UCC)</a>, Ireland. I worked as part of the <a href="http://www.chistera.eu/" target="_blank">CHIST-ERA</a> <a href="https://dyposit.eu/" target="_blank">DYPOSIT</a> project. My research was directed by <a href="https://simonnfoley.github.io/" target="_blank">Dr. Simon Foley</a>, and focused primarily on autonomic security control reconfiguration, and the problem of large, shared Cyber-Physical System infrastructures under attack. </p>                                       
+				<p style="text-align:justify">I served previously as a nominated peer-reviewer for the <a href="http://conf.laas.fr/esorics/" target="_blank">European Symposium on Research in Computer Security (ESORICS)</a>.  </p>                                       
+				<p style="text-align:justify">I succeeded in my viva voce defence at the Department of Computer Science in UCC for a Ph.D. in reasoning about anomaly-free policy
 management for network and host-based access control mechanisms in May 2017. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
 				<p style="text-align:justify">My current research interests include autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security, cyber-physical security and mathematics. </p>
                                 <p style="text-align:justify">My Erd&#337;s number is <a href="https://www.csauthors.net/distance/paul-erdos/ultan-neville" target="_blank">5</a> &#9786;</p>
@@ -32,11 +35,12 @@ management for network and host-based access control mechanisms in May 2017. I a
     		</div>
 		</div>
 		<footer>
-                <p> <b>Personal page</b> </p>
+                <p> <b>Personal pages</b> </p>
     		<ul>
        		        <li>Ultan Neville</li>
-        		<li><a href="mailto:u.neville@cs.ucc.ie">u.neville@cs.ucc.ie</a></li>
+        		<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
+		<p>Disclaimer: Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI. </p>	
 		</footer>
 	</body>
 </html>
