--- a/pubs.html
+++ b/pubs.html
@@ -3,12 +3,12 @@
 	<head>
 		<title>Publications</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
-                <meta name="description" content="Personal webpage of Ultan Neville">
+                <meta name="description" content="Personal webpages of Ultan Neville">
                 <meta name="keywords" content="security, cyber security firewall, ultan neville, ultan neville listowel">
 	</head>
 	<body>
                 <header>
-                <h2>Ultan Neville (B.Sc. (Hons.), M.Sc., Ph.D.)</h2>
+                <h2>Dr. Ultan Neville (B.Sc. (Hons.), M.Sc., Ph.D.)</h2>
                 </header>
 
                 <nav>
@@ -45,11 +45,12 @@ Applications (JISA)</i>, 18(1):14-29, 2013. <a href="https://doi.org/10.1016/j.j
     		</div>
 		</div>
 		<footer>
-                <p> <b>Personal page</b> </p>
+                <p> <b>Personal pages</b> </p>
     		<ul>
        		        <li>Ultan Neville</li>
-        		<li><a href="mailto:u.neville@cs.ucc.ie">u.neville@cs.ucc.ie</a></li>
+        		<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
+		<p>Disclaimer: Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI. </p>	
 		</footer>
 	</body>
 </html>
