--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ management for network and host-based access control mechanisms in May 2017. I a
        		        <li>Ultan Neville</li>
         		<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
-		<p>Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI. </p>	
+		<p> <b>Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI.</b> </p>	
 		</footer>
 	</body>
 </html>
