--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<p style="text-align:justify">I'm currently a Senior Cyber Security Engineer at <a href="http://www.johnsoncontrols.com/" target="_blank">Johnson Controls</a>, where I specialize in Product Security and Enterprise Application Security. I report to the Director of Global Product Security, Technical Services division at JCI, where
 I lead the ongoing development and operation of an automated Red Teaming ecosystem for the Global Product Security Technical Services team - a best-in-class scalable system for internal security assessment and pen-testing capabilities, applied to various product lines at JCI.</p>                                       
 				<p style="text-align:justify">I was previously a Post-Doctoral Researcher (Cyber Security) at the <a href="https://www.ucc.ie/en/misl/" target="_blank">Mobile and Internet Systems Labratory (MISL)</a>, <a href="https://www.ucc.ie/en/compsci/" target="_blank">Department of Computer Science</a>, <a href="https://www.ucc.ie/en/" target="_blank">University College Cork (UCC)</a>, Ireland. I worked as part of the <a href="http://www.chistera.eu/" target="_blank">CHIST-ERA</a> <a href="https://dyposit.eu/" target="_blank">DYPOSIT</a> project. My research was directed by <a href="https://simonnfoley.github.io/" target="_blank">Dr. Simon Foley</a>, and focused primarily on autonomic security control reconfiguration, and the problem of large, shared Cyber-Physical System infrastructures under attack. </p>                                       
-				<p style="text-align:justify">I have served previously as a nominated peer-reviewer for the <a href="http://conf.laas.fr/esorics/" target="_blank">European Symposium on Research in Computer Security (ESORICS)</a>.  </p>                                       
+				<p style="text-align:justify">I have served previously as a nominated peer-reviewer of scientific publications for the <a href="http://conf.laas.fr/esorics/" target="_blank">European Symposium on Research in Computer Security (ESORICS)</a>.  </p>                                       
 				<p style="text-align:justify">I succeeded in my viva voce defence at the Department of Computer Science in UCC for a Ph.D. in reasoning about anomaly-free policy
 management for network and host-based access control mechanisms in May 2017. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
 				<p style="text-align:justify">My current research interests include autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security, cyber-physical security and mathematics. </p>
@@ -40,7 +40,7 @@ management for network and host-based access control mechanisms in May 2017. I a
        		        <li>Ultan Neville</li>
         		<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
-		<p> <b>Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI.</b> </p>	
+		<p> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI.</b> </p>	
 		</footer>
 	</body>
 </html>
