--- a/pubs.html
+++ b/pubs.html
@@ -15,7 +15,8 @@
     		<ul>
 	        	<li><a href="https://ultan-neville.github.io/">About</a></li>
         		<li><a href="/pubs.html">Publications</a></li>
-    		</ul>
+        		<li><a href="/projects.html">Projects</a></li>
+		</ul>
 		</nav>
 
                         <h2>Publications</h2>
