--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,8 @@
 	        	<li><a href="https://ultan-neville.github.io/">About</a></li>
         		<li><a href="/pubs.html">Publications</a></li>
         		<li><a href="/projects.html">Projects</a></li>
-        </ul>
+        		<li><a href="/cv/unevilleCV.pdf" target="_blank">CV</a></li>
+		</ul>
 		</nav>
 
                         <h2>Projects</h2>
