--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ I lead the ongoing development and operation of an automated Red Teaming ecosyst
 				<p style="text-align:justify">I have served as a nominated peer-reviewer of scientific publications for the <a href="http://conf.laas.fr/esorics/" target="_blank">European Symposium on Research in Computer Security (ESORICS)</a>.  </p>                                       
 				<p style="text-align:justify">I succeeded in my viva voce defence at the Department of Computer Science in UCC for a Ph.D. in reasoning about anomaly-free policy
 management for network and host-based access control mechanisms in May 2017. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
-				<p style="text-align:justify">My current research interests include autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security, cyber-physical security and mathematics. </p>
+				<p style="text-align:justify">My current research interests include autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security, cyber-physical security and mathematics. (Like-minded individuals please feel free to get in-touch via the contact information in the footer on this page!) </p>
                                 <p style="text-align:justify">My Erd&#337;s number is <a href="https://www.csauthors.net/distance/paul-erdos/ultan-neville" target="_blank">5</a> &#9786;</p>
 
     		</div>
