--- a/pubs.html
+++ b/pubs.html
@@ -25,7 +25,7 @@
 		<li style="text-align:justify">U. Neville and S.N. Foley. Reasoning about firewall policies through refinement and composition. 
 <i>Journal of Computer Security</i>, 26(2):207-254, 2018. <a href="https://doi.org/10.3233/JCS-17971" target="_blank">[DOI]</a> <a href="/bib/jcs2018.bib" target="_blank">[BibTeX]</a> <a href="/pubs/jcs2018.pdf" target="_blank">[PDF]</a> </li><br>
 			
-        	<li style="text-align:justify">U.J. Neville. <i>Reasoning About Firewall Policies Through Refinement and Composition.</i> PhD thesis, University College Cork, Ireland, February 2017. <a href="https://doi.org/10468/4820" target="_blank">[DOI]</a> <a href="/bib/NevilleUJ_PhD2017.bib" target="_blank">[BibTeX]</a> <a href="https://cora.ucc.ie/bitstream/handle/10468/4820/NevilleUJ_PhD2017.pdf?sequence=1&isAllowed=y" target="_blank">[PDF]</a> </li><br>
+        	<li style="text-align:justify">U.J. Neville. <i>Reasoning About Firewall Policies Through Refinement and Composition.</i> PhD thesis, University College Cork, Ireland, 2017. <a href="https://doi.org/10468/4820" target="_blank">[DOI]</a> <a href="/bib/NevilleUJ_PhD2017.bib" target="_blank">[BibTeX]</a> <a href="https://cora.ucc.ie/bitstream/handle/10468/4820/NevilleUJ_PhD2017.pdf?sequence=1&isAllowed=y" target="_blank">[PDF]</a> </li><br>
 
                 <li style="text-align:justify">U. Neville and S.N. Foley. Reasoning About Firewall Policies Through Refinement and Composition. 
 In <i>Data and Applications Security and Privacy
