--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </header>
                 <nav>
     		<ul>
-	        	<li><a href="https://ultan-neville.github.io/">About</a></li>
+	        	<li><a href="https://ultan-neville.github.io/"><u>About</u></a></li>
         		<li><a href="/pubs.html">Publications</a></li>
         		<li><a href="/projects.html">Projects</a></li>
         		<li><a href="/cv/unevilleCV.pdf" target="_blank">CV</a></li>
