--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     		<ul>
 	        	<li><a href="https://ultan-neville.github.io/">About</a></li>
         		<li><a href="/pubs.html">Publications</a></li>
-        		<li><a href="/projects.html">Projects</a></li>
+        		<li><a href="/projects.html"><u>Projects</u></a></li>
         		<li><a href="/cv/unevilleCV.pdf" target="_blank">CV</a></li>
 		</ul>
 		</nav>
