--- a/pubs.html
+++ b/pubs.html
@@ -14,7 +14,7 @@
                 <nav>
     		<ul>
 	        	<li><a href="https://ultan-neville.github.io/">About</a></li>
-        		<li><a href="/pubs.html"><u>Publications</u></a></li>
+        		<li><a href="/pubs.html"><u><b>Publications</b></u></a></li>
         		<li><a href="/projects.html">Projects</a></li>
         		<li><a href="/cv/unevilleCV.pdf" target="_blank">CV</a></li>
 		</ul>
