--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Dr. Ultan Neville - personal pages</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
-                <meta name="description" content="Personal webpages of Ultan Neville">
+                <meta name="description" content="Personal webpages of Dr. Ultan Neville">
                 <meta name="keywords" content="security, cyber security firewall, ultan neville, ultan neville listowel">
                 <meta name="revisit-after" content="15 days" />
                 <meta name="distribution" content="global" />
