--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ management for network and host-based access control mechanisms in 2017. I also 
                 <p> <b>Personal pages</b> </p>
     		<ul>
        		        <li>Ultan Neville</li>
-        		<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
+        		<li><a href="https://www.researchgate.net/profile/Ultan_Neville">https://www.researchgate.net/profile/Ultan_Neville/</a></li>
+			<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
 		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI.</b> </p>	
 		</footer>
