--- a/pubs.html
+++ b/pubs.html
@@ -50,7 +50,8 @@ Applications (JISA)</i>, 18(1):14-29, 2013. <a href="https://doi.org/10.1016/j.j
                 <p> <b>Personal pages</b> </p>
     		<ul>
        		        <li>Ultan Neville</li>
-        		<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
+        		<li><a href="https://www.researchgate.net/profile/Ultan_Neville">https://www.researchgate.net/profile/Ultan_Neville/</a></li>
+			<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
 		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI.</b> </p>	
 		</footer>
