--- a/pubs.html
+++ b/pubs.html
@@ -4,7 +4,7 @@
 		<title>Dr. Ultan Neville - personal pages</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
                 <meta name="description" content="Personal webpages of Dr. Ultan Neville">
-                <meta name="keywords" content="security, cyber security firewall, ultan neville, ultan neville listowel">
+                <meta name="keywords" content="security, cyber security firewall, ultan neville">
 	</head>
 	<body>
                 <header>
