--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dr. Ultan Neville - personal pages</title>
+		<title>Dr. Ultan Neville - Personal Pages</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
-                <meta name="description" content="Personal webpages of Dr. Ultan Neville">
+                <meta name="description" content="Personal Webpages of Dr. Ultan Neville">
                 <meta name="keywords" content="security, cyber security firewall, ultan neville">
                 <meta name="revisit-after" content="15 days" />
                 <meta name="distribution" content="global" />
@@ -25,10 +25,12 @@
 		<div class="container">
     		<div class="blurb">
         		<h2>Personal pages</h2>
+
 				<p style="text-align:justify">I'm a Cyber Security enthusiast and researcher.</p>
-				<p style="text-align:justify">I'm currently working as a Senior Cyber Security Engineer at <a href="http://www.johnsoncontrols.com/" target="_blank">Johnson Controls</a>, where I specialize in Product Security and Enterprise Application Security. I report to the Director of Global Product Security Engineering &amp; Innovation Services, where
-I lead the ongoing development of an automated Red Teaming ecosystem for the Global Product Security Technical Services team - a best-in-class scalable system for internal security assessment and pen-testing capabilities, applied to various product lines at JCI.</p>                                       
-				<p style="text-align:justify">I was previously a Post-Doctoral Researcher (Cyber Security) at the <a href="https://www.ucc.ie/en/misl/" target="_blank">Mobile and Internet Systems Laboratory (MISL)</a>, <a href="https://www.ucc.ie/en/compsci/" target="_blank">Department of Computer Science</a>, <a href="https://www.ucc.ie/en/" target="_blank">University College Cork (UCC)</a>, Ireland. I worked as part of the <a href="http://www.chistera.eu/" target="_blank">CHIST-ERA</a> <a href="https://dyposit.eu/" target="_blank">DYPOSIT</a> project. My research was directed by <a href="https://simonnfoley.github.io/" target="_blank">Dr. Simon Foley</a>, and focused primarily on autonomic security control reconfiguration, and the problem of large, shared Cyber-Physical System infrastructures under attack. </p>                                       
+<p style="text-align:justify">I'm currently working as a Principal Cyber Security Engineer at <a href="https://www.globalshares.com" target="_blank">Global Shares</a>. I have company-wide oversight for the Cyber Security iniative, including the development of a best-in-class Product/Application Security Program. I report to the CTO, and I work closely with the DevOps team. I lead Cyber Security training iniatives for the wider company. I'm also in the process of constructing an Information Security Management System for the business that aligns with ISO 27001.</p> 
+				<p style="text-align:justify">Previously, I worked as a Senior Cyber Security Engineer at <a href="http://www.johnsoncontrols.com/" target="_blank">Johnson Controls (JCI)</a>, where I specialized in Product Security and Enterprise Application Security. I reported to the Director of Global Product Security Engineering &amp; Innovation Services, where
+I lead the development of an automated Red Teaming ecosystem for the Global Product Security Technical Services team. The work defined a best-in-class scalable system for internal security assessment and pen-testing capabilities, applied to various product lines at JCI.</p>                                       
+				<p style="text-align:justify">Prior to this, I was a Post-Doctoral Researcher (Cyber Security) at the <a href="https://www.ucc.ie/en/misl/" target="_blank">Mobile and Internet Systems Laboratory (MISL)</a>, <a href="https://www.ucc.ie/en/compsci/" target="_blank">Department of Computer Science</a>, <a href="https://www.ucc.ie/en/" target="_blank">University College Cork (UCC)</a>, Ireland. I worked as part of the <a href="http://www.chistera.eu/" target="_blank">CHIST-ERA</a> <a href="https://dyposit.eu/" target="_blank">DYPOSIT</a> project. My research was directed by <a href="https://simonnfoley.github.io/" target="_blank">Dr. Simon Foley</a>, and focused primarily on autonomic security control reconfiguration, and the problem of large, shared Cyber-Physical System infrastructures under attack. </p>                                       
 				<p style="text-align:justify">I have served as a nominated peer-reviewer of scientific publications for the <a href="http://conf.laas.fr/esorics/" target="_blank">European Symposium on Research in Computer Security (ESORICS)</a>.  </p>                                       
 				<p style="text-align:justify">I succeeded in my viva voce defence at the Department of Computer Science in UCC for a Ph.D. in reasoning about anomaly-free policy
 management for network and host-based access control mechanisms in 2017. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
@@ -43,7 +45,7 @@ management for network and host-based access control mechanisms in 2017. I also 
        		        <li>Ultan Neville</li>
 			<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
-		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI.</b> </p>	
+		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of Global Shares nor does it constitute any official communication of Global Shares.</b> </p>	
 		</footer>
 	</body>
 </html>
