--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dr. Ultan Neville - personal pages</title>
+		<title>Dr. Ultan Neville - Personal Pages</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
                 <meta name="description" content="Personal webpages of Dr. Ultan Neville">
                 <meta name="keywords" content="security, cyber security firewall, ultan neville">
@@ -35,7 +35,7 @@
        		        <li>Ultan Neville</li>
         			<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
-		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI.</b> </p>	
+		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of Global Shares nor does it constitute any official communication of Global Shares.</b> </p>	
 		</footer>
 
 	</body>
