--- a/pubs.html
+++ b/pubs.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dr. Ultan Neville - personal pages</title>
+		<title>Dr. Ultan Neville - Personal Pages</title>
                 <link rel="stylesheet" type="text/css" href="/css/main.css">
-                <meta name="description" content="Personal webpages of Dr. Ultan Neville">
+                <meta name="description" content="Personal Webpages of Dr. Ultan Neville">
                 <meta name="keywords" content="security, cyber security firewall, ultan neville">
 	</head>
 	<body>
@@ -52,7 +52,7 @@ Applications (JISA)</i>, 18(1):14-29, 2013. <a href="https://doi.org/10.1016/j.j
        		        <li>Ultan Neville</li>
 			<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
 		</ul>
-		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of JCI nor does it constitute any official communication of JCI.</b> </p>	
+		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of Global Shares nor does it constitute any official communication of Global Shares.</b> </p>	
 		</footer>
 
 	</body>
