--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ management for network and host-based access control mechanisms in 2017. I also 
                 <p> <b>Personal pages</b> </p>
     		<ul>
        		        <li>Ultan Neville</li>
-			<li><a href="https://www.linkedin.com/in/ultan-neville/">https://www.linkedin.com/in/ultan-neville/</a></li>
+			<li><a href = "mailto: ultan.neville@protonmail.com">ultan.neville@protonmail.com</a></li>
 		</ul>
 		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of Global Shares nor does it constitute any official communication of Global Shares.</b> </p>	
 		</footer>
