--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				<p style="text-align:justify">I have served as a nominated peer-reviewer of scientific publications for the <a href="http://conf.laas.fr/esorics/" target="_blank">European Symposium on Research in Computer Security (ESORICS)</a>.  </p>                                       
 				<p style="text-align:justify">I hold a Ph.D in Cyber Security from the Department of Computer Science in UCC. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
 				<p style="text-align:justify">My current research interests include pen-testing automation and autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security and cyber-physical - including ICS and IoT security. </p>
-                                <p style="text-align:justify">My <a href="https://en.wikipedia.org/wiki/Erd%C5%91s_number" target="_blank">Erd&#337;s number</a> is <a href="https://www.csauthors.net/distance/paul-erdos/ultan-neville" target="_blank">5</a> &#9786;</p>
-				<p style="text-align:justify">I am also a firm believer in the truth of mathematics and formal modeling. I love hearing from people with similar interests, so if you are a like-minded individual then feel free to get in-touch! Contact details included in page footer.</p>
+                                <p style="text-align:justify">I am also a firm believer in the truth of mathematics and formal modeling. My <a href="https://en.wikipedia.org/wiki/Erd%C5%91s_number" target="_blank">Erd&#337;s number</a> is <a href="https://www.csauthors.net/distance/paul-erdos/ultan-neville" target="_blank">5</a> &#9786;</p>
+				<p style="text-align:justify">I love hearing from people with similar interests, so if you are a like-minded individual then feel free to get in-touch! Contact details included in page footer.</p>
     		</div>
 		</div>
 		<footer>
