--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	        	<li><a href="https://ultan-neville.github.io/"><u>About</u></a></li>
         		<li><a href="/pubs.html">Publications</a></li>
         		<li><a href="/projects.html">Projects</a></li>
-        		<li><<a href="">CV</a></li>
+        		<li><a href="">CV</a></li>
 		</ul>
 		</nav>
 
