--- a/index.html
+++ b/index.html
@@ -18,21 +18,19 @@
 	        	<li><a href="https://ultan-neville.github.io/"><u>About</u></a></li>
         		<li><a href="/pubs.html">Publications</a></li>
         		<li><a href="/projects.html">Projects</a></li>
-        		<li><a href="">CV</a></li>
 		</ul>
 		</nav>
-
 		<div class="container">
     		<div class="blurb">
         		<h2>Personal pages</h2>
-
 				<p style="text-align:justify">I'm a Cyber Security enthusiast and researcher.</p>
-				<p style="text-align:justify">I'm currently working as the Cyber Security Lead at <a href="https://www.globalshares.com" target="_blank">Global Shares</a>. I am a trusted advisor to C-suite management for multi-year, global, Cyber Security strategic initiatives and programs. I was formerly the Principal Cyber Security Engineer for the organisation.</p> 
-				<p style="text-align:justify">Previously, I worked as a Senior Cyber Security Engineer at <a href="http://www.johnsoncontrols.com/" target="_blank">Johnson Controls (JCI)</a>, where I specialized in Product Security and Enterprise Application Security.</p>                                       
-				<p style="text-align:justify">Prior to this, I was a Post-Doctoral Researcher (Cyber Security) at the <a href="https://www.ucc.ie/en/misl/" target="_blank">Mobile and Internet Systems Laboratory (MISL)</a>, <a href="https://www.ucc.ie/en/compsci/" target="_blank">Department of Computer Science</a>, <a href="https://www.ucc.ie/en/" target="_blank">University College Cork (UCC)</a>, Ireland. I worked as part of the <a href="http://www.chistera.eu/" target="_blank">CHIST-ERA</a> <a href="https://dyposit.eu/" target="_blank">DYPOSIT</a> project. My research was directed by <a href="https://simonnfoley.github.io/" target="_blank">Dr. Simon Foley</a>, and focused primarily on autonomic security control reconfiguration, and the problem of large, shared Cyber-Physical System infrastructures under attack. </p>                                       
-				<p style="text-align:justify">I have served as a nominated peer-reviewer of scientific publications for the <a href="http://conf.laas.fr/esorics/" target="_blank">European Symposium on Research in Computer Security (ESORICS)</a>.  </p>                                       
+				<p style="text-align:justify">I'm also a Manager of Information Security Operations at <a href="https://www.mastercard.com" target="_blank">Mastercard</a>.</p> 
+				<p style="text-align:justify">Previously, I was the Cyber Security Lead at <a href="https://www.globalshares.com" target="_blank">Global Shares</a>, and I was formerly the Principal Cyber Security Engineer for the organisation.</p> 
+				<p style="text-align:justify">Prior to this, I worked as a Senior Cyber Security Engineer at <a href="http://www.johnsoncontrols.com/" target="_blank">Johnson Controls (JCI)</a>.</p>                                       
+				<p style="text-align:justify">I've also worked as a Post-Doctoral Researcher (Cyber Security) at the <a href="https://www.ucc.ie/en/misl/" target="_blank">Mobile and Internet Systems Laboratory (MISL)</a>, <a href="https://www.ucc.ie/en/compsci/" target="_blank">Department of Computer Science</a>, <a href="https://www.ucc.ie/en/" target="_blank">University College Cork (UCC)</a>, Ireland. I worked as part of the <a href="http://www.chistera.eu/" target="_blank">CHIST-ERA</a> <a href="https://dyposit.eu/" target="_blank">DYPOSIT</a> project. My research was directed by <a href="https://simonnfoley.github.io/" target="_blank">Dr. Simon Foley</a>, and focused primarily on autonomic security control reconfiguration, and the problem of large, shared Cyber-Physical System infrastructures under attack. </p>                                       
+				<p style="text-align:justify">I've served as a nominated peer-reviewer of scientific publications for the <a href="http://conf.laas.fr/esorics/" target="_blank">European Symposium on Research in Computer Security (ESORICS)</a>.</p>                                       
 				<p style="text-align:justify">I hold a Ph.D. in Cyber Security from the Department of Computer Science in UCC. I also hold an M.Sc. in Software and Systems for Mobile Networks, and a B.Sc. (Hons.) in Computer Science, both awarded from University College Cork.</p>                 
-				<p style="text-align:justify">My current research interests include pen-testing automation and autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security and cyber-physical - including ICS and IoT security. </p>
+				<p style="text-align:justify">My current research interests include IdAM and UEBA, pen-testing automation and autonomic security control reconfiguration, dynamic policy frameworks, network and host-based access controls, mobile security, cloud security and cyber-physical - including ICS and IoT security. </p>
                                 <p style="text-align:justify">I am also a firm believer in the truth of mathematics and formal modeling. My <a href="https://en.wikipedia.org/wiki/Erd%C5%91s_number" target="_blank">Erd&#337;s number</a> is <a href="https://www.csauthors.net/distance/paul-erdos/ultan-neville" target="_blank">5</a> &#9786;</p>
 				<p style="text-align:justify">I love hearing from people with similar interests, so if you are a like-minded individual then feel free to get in-touch! Contact details included in page footer.</p>
     		</div>
@@ -43,7 +41,7 @@
        		        <li>Ultan Neville</li>
 			<li><a href = "mailto: ultan.neville@protonmail.com">ultan.neville@protonmail.com</a></li>
 		</ul>
-		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of Global Shares nor does it constitute any official communication of Global Shares.</b> </p>	
+		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of Mastercard nor does it constitute any official communication of Mastercard.</b> </p>	
 		</footer>
 	</body>
 </html>
