--- a/pubs.html
+++ b/pubs.html
@@ -16,7 +16,6 @@
 	        	<li><a href="https://ultan-neville.github.io/">About</a></li>
         		<li><a href="/pubs.html"><u>Publications</u></a></li>
         		<li><a href="/projects.html">Projects</a></li>
-        		<li><a href="">CV</a></li>
 		</ul>
 		</nav>
 
@@ -52,7 +51,7 @@ Applications (JISA)</i>, 18(1):14-29, 2013. <a href="https://doi.org/10.1016/j.j
        		        <li>Ultan Neville</li>
 			<li><a href = "mailto: ultan.neville@protonmail.com">ultan.neville@protonmail.com</a></li>
 		</ul>
-		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of Global Shares nor does it constitute any official communication of Global Shares.</b> </p>	
+		<p style="text-align:justify"> <b><u>Disclaimer:</u> Content published here does not necessarily reflect the views and opinions of Mastercard nor does it constitute any official communication of Mastercard.</b> </p>	
 		</footer>
 
 	</body>
